syntax = "proto3";
package subscribers;

service SubscribersService {
  rpc CreateSubscriber(CreateSubscriberDto) returns (Subscriber) {}
  rpc GetAllSubscribers(GetAllSubscribersParams) returns (SubscribersResponse) {}
}

message GetAllSubscribersParams {}

message CreateSubscriberDto {
  string name = 1;
  string email = 2;
}

message Subscriber {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message SubscribersResponse {
  repeated Subscriber data = 1;
}



